--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,16 +17,19 @@ jobs:
         with:
           path: ~/.local # This path is specific to Ubuntu
           # Look to see if there is a cache hit for the corresponding requirements file
-          key: ${{ matrix.python-version }}-dotlocal12-${{ hashFiles('requirements.txt') }}
+          key: ${{ matrix.python-version }}-dotlocal12-${{ hashFiles('requirements*.txt') }}
           restore-keys: |
             ${{ matrix.python-version }}-dotlocal12-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements_tests.txt
-          pip install -e .
+          python -m pip install --user --upgrade pip
+          pip install --user -r requirements.txt
+          pip install --user -r requirements_tests.txt
+          pip install --user -e .
+          which python; which pip
+          python --version; pip --version
       - name: Test with pytest
         run: |
           export PATH=~/.local/bin:$PATH
-          #pytest -s -vv
+          export PYTHONPATH=~/.local/lib:.:$PYTHONPATH
+          pytest -s -vv
