disable tests for debugging

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
             ${{ matrix.python-version }}-dotlocal12-
       - name: Install dependencies
         run: |
+          export PATH=~/.local/bin:$PATH
           python -m pip install --user --upgrade pip
           pip install --user -r requirements.txt
           pip install --user -r requirements_tests.txt
@@ -32,4 +33,6 @@ jobs:
         run: |
           export PATH=~/.local/bin:$PATH
           export PYTHONPATH=~/.local/lib:.:$PYTHONPATH
-          pytest -s -vv
+          echo "PATH: $PATH"
+          echo "PYTHONPATH: $PYTHONPATH"
+          #pytest -s -vv
