--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ __pycache__/
 # Tests and coverage
 /.pytest_cache/
 /.cache/
-/env/
+/*env/
 /dask-worker-space/
 
 # docs
@@ -22,3 +22,10 @@ __pycache__/
 
 # IDEs
 /.idea/
+
+# Buid artifacts
+.coverage
+coverage.xml
+data/
+write/
+.eggs/
