Update requirements.txt to got to the submodule dask/ for dask array and dataframe.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ natsort
 importlib_metadata>=0.7; python_version < '3.8'
 packaging
 # TODO: make these belog to an "anndata[dask]" "extra"
-dask[dataframe]
-dask[array]
+-e dask[dataframe] dask/
+-e dask[array] dask/
