--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dataclasses
 natsort
 importlib_metadata>=0.7; python_version < '3.8'
 packaging
+sparse>=0.10.0
 # TODO: make these belog to an "anndata[dask]" "extra"
 -e dask[dataframe]
 -e dask[array]
