--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,32 +1,41 @@
-name: pytest
-on: [push]
+name: Docker
+on: push
 jobs:
-  test:
+  ci:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6,3.7]
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Cache pip
-        uses: actions/cache@v1
+          ref: ${{ github.head_ref }}
+          submodules: true
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          path: ~/.local
-          key: ${{ matrix.python-version }}-dotlocal12-${{ hashFiles('requirements*.txt') }}
-      - name: Install dependencies
+          python-version: '3.7.9'
+      - name: Fetch current tag
+        if: "startsWith(github.ref, 'refs/tags/')"
         run: |
-          export PATH=~/.local/bin:$PATH
-          python -m pip install --user --upgrade pip
-          pip install --user -r requirements.txt
-          pip install --user -r requirements_tests.txt
-          pip install --user -e .
-          pip uninstall -y scanpy
-      - name: Test with pytest
+          git fetch --depth=1 origin +"$GITHUB_REF:$GITHUB_REF"
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Parse branch/tag name
+        id: vars
+        run: echo ::set-output name=name::${GITHUB_REF#refs/*/}
+      - name: "docker build"
         run: |
-          export PATH=~/.local/bin:$PATH
-          export PYTHONPATH=~/.local/lib:.:$PYTHONPATH
-          pytest -s -vvv anndata
+          docker build --build-arg REF=${{ steps.vars.outputs.name }} -t celsiustx/anndata .
+      - name: "docker tag"
+        run: |
+          docker tag celsiustx/anndata "celsiustx/anndata:${{ steps.vars.outputs.name }}"
+          docker tag celsiustx/anndata "celsiustx/anndata:$GITHUB_SHA"
+      - name: "docker login"
+        run: |
+          docker login -u ${{ secrets.DOCKERHUB_USER }} -p ${{ secrets.DOCKERHUB }}
+      - name: "docker push"
+        run: |
+          docker push celsiustx/anndata
+          docker push "celsiustx/anndata:${{ steps.vars.outputs.name }}"
+          docker push "celsiustx/anndata:$GITHUB_SHA"
